# src/main/resources/static/swagger.yml
@@ -234,10 +234,77 @@ paths:
                 $ref: '#/components/schemas/MatchResponseDTO'
         '401':
           description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDTO'
+              examples:
+                missingToken:
+                  summary: Missing authentication token
+                  value:
+                    timestamp: "2024-12-08T19:30:00Z"
+                    message: "Authentication token is required."
+                invalidToken:
+                  summary: Invalid or malformed token
+                  value:
+                    timestamp: "2024-12-08T19:30:00Z"
+                    message: "Invalid authentication token."
+                expiredToken:
+                  summary: Expired token
+                  value:
+                    timestamp: "2024-12-08T19:30:00Z"
+                    message: "Authentication token has expired."
+                authenticationFailed:
+                  summary: Authentication server connection failed
+                  value:
+                    timestamp: "2024-12-08T19:30:00Z"
+                    message: "Unable to authenticate. Please try again later."
+        '403':
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDTO'
+              examples:
+                missingToken:
+                  summary: The user does not have the privileges to perform the operation.
+                  value:
+                    timestamp: "2024-12-08T19:30:00Z"
+                    message: "Only administrators can perform this operation."
         '404':
-          description: Not Found
+          description: Resource Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDTO'
+              examples:
+                homeTeamNotFound:
+                  summary: The home team could not be found.
+                  value:
+                    timestamp: "2024-12-08T19:30:00Z"
+                    message: "The home team could not be found."
+                visitingTeamNotFound:
+                  summary: The visiting team could not be found.
+                  value:
+                    timestamp: "2024-12-08T19:30:00Z"
+                    message: "The visiting team could not be found."
         '422':
-          description: Matchmaking is not allowed.
+          description: Business Exception
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDTO'
+              examples:
+                invalidMatchTime:
+                  summary: The home team could not be found.
+                  value:
+                    timestamp: "2024-12-08T19:30:00Z"
+                    message: "The date of the match has already passed, please provide a future date."
+                teamAlreadyInMatch:
+                  summary: Team already involved in a match
+                  value:
+                    timestamp: "2024-12-08T19:30:00Z"
+                    message: "One of the teams in the match already has a game scheduled for this date and time."
     get:
       summary: Reactive stream of matches (SSE)
       description: Returns all existing matches and new creations of Server-Sent Events.
@@ -411,55 +478,6 @@ paths:
                   value:
                     timestamp: "2024-12-08T19:30:00Z"
                     message: "The reported match was not found"
-  /scores:
-    get:
-      summary: Operation to retrieve the results of ongoing matches.
-      description: This operation will bring every second the updated result of the matches that have the result = IN_PROGRESS, informing the match ID, the names of the participating teams and the score separately.
-      operationId: getStreamScores
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: Stream of matches (text/event-stream)
-          content:
-            text/event-stream:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/MatchResponseDTO'
-        '401':
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponseDTO'
-              examples:
-                missingToken:
-                  summary: Missing authentication token
-                  value:
-                    timestamp: "2024-12-08T19:30:00Z"
-                    message: "Authentication token is required."
-                invalidToken:
-                  summary: Invalid or malformed token
-                  value:
-                    timestamp: "2024-12-08T19:30:00Z"
-                    message: "Invalid authentication token."
-                expiredToken:
-                  summary: Expired token
-                  value:
-                    timestamp: "2024-12-08T19:30:00Z"
-                    message: "Authentication token has expired."
-                authenticationFailed:
-                  summary: Authentication server connection failed
-                  value:
-                    timestamp: "2024-12-08T19:30:00Z"
-                    message: "Unable to authenticate. Please try again later."
-        '500':
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponseDTO'
   /bet:
     post:
       tags:
@@ -569,6 +587,8 @@ paths:
               application/json:
                 schema:
                   $ref: '#/components/schemas/ErrorResponseDTO'
+
+  /bettingPool/{bettingPoolKey}:
     get:
       tags:
         - betting_pool
